<resources>
    <string name="app_name">My  Expenses</string>

    <!-- Preference Titles -->
    <string name="pref_header_identity">Your Identity</string>

    <!-- Preference Messages  -->
    <string name="pref_title_name">Your name</string>
    <string name="pref_title_gender">Your gender</string>

    <!-- Preference Key for button -->
    <string name="pref_key_button">Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Splash Screen -->
    <string name="designed_by">Designed by</string>

    <!-- Onboarding Screen Headings -->
    <string name="onboarding_title_1">Record Your Expenses</string>
    <string name="onboarding_title_2">Get Instant Notifications</string>
    <string name="onboarding_title_3">Get Instant Exchange Rates</string>
    <string name="onboarding_title_4">See Your Expenses</string>

    <!-- Onboarding Screen Descriptions -->
    <string name="onboarding_desc_1">Whenever you spend something, record it to database</string>
    <string name="onboarding_desc_2">Get notifications if you extent your expenses of the echelon you specified</string>
    <string name="onboarding_desc_3">We present active API for getting instant exchange rate</string>
    <string name="onboarding_desc_4">See your expenses in the form of TL, Dollar, Euro, Sterlin</string>

    <!-- Onboarding Screen -->
    <string name="onboarding_image">Onboarding Image</string>
    <string name="skip_and_get_started">Skip and Get Started</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="do_not_show_again">do not show again</string>
    <string name="original">original</string>
    <string name="tl">TL</string>
    <string name="sterlin">Sterlin</string>
    <string name="euro">Euro</string>
    <string name="dolar">Dolar</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="hello">Hello</string>
    <string name="add_expense">Add Expense</string>
    <string name="add">Add</string>
    <string name="add_an_expense">Add an expense</string>
    <string name="description_of_the_expense">Description of the expense</string>
    <string name="amount_of_the_expense_only_number">Amount of the expense (only number)</string>
    <string name="TL">TL</string>
    <string name="STERLIN">Sterlin</string>
    <string name="EURO">Euro</string>
    <string name="DOLAR">Dollar</string>
    <string name="invoice">Invoice</string>
    <string name="rent">Rent</string>
    <string name="cleaning">Cleaning</string>
    <string name="clothing">Clothing</string>
    <string name="food">Food</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
    <string name="goods">Goods</string>
    <string name="other">Other</string>

    <string name="delete_expense">Delete Expense</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="category_icon">Category Icon</string>
    <string name="there_is_no_any_expense_yet">There is no expense yet.</string>

</resources>